--- a/tip-creators-dotsol/android/app/src/main/res/values/colors.xml
+++ b/tip-creators-dotsol/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#FFFFFF</color>
-  <color name="iconBackground">#ffffff</color>
+  <color name="splashscreen_background">#FF6B35</color>
+  <color name="iconBackground">#FF6B35</color>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#FFFFFF</color>
+  <color name="colorPrimaryDark">#FF6B35</color>
 </resources>
